# just-type

./: .gitignore  README.md  justfile  pnpm-lock.yaml
backend/: .env.example  Cargo.toml  README.md  docker-compose.yml  justfile
backend/.sqlx/: query-11106bfcd4b70ebc8cdb6468a84f101b7e21246b0275aac067306f0a204d3ebc.json  query-35cd59dc99241351dc81c13f5d2f11a1b499d3372901453e2876e515ba1ea963.json  query-683fa8707cfdc75168a5c75aac0fbb423d6b35f53070c5ec1e4eb8bd3226ed5c.json  query-fee7141d3890f235f9d5c5dcfa1824a7fae6c85b15124cd9f3772cd2fd281753.json  query-ff3665b12a6876e65b3f13fc87b3539065a70876c10c860516a81acd8b68b944.json
backend/migrations/: 20250101000001_initial_schema.sql  20250101000002_add_subdoc_metadata.sql  20250101000003_add_vault_members.sql  20250101000004_add_user_profiles.sql  20250101000005_add_soft_delete.sql  20250126000001_add_organizations.sql  20250126000002_modify_vaults_for_orgs.sql  20250126000003_add_audit_logging.sql  20250126000004_add_uploads.sql  20250126000005_add_canvas_doc_type.sql
backend/src/: cleanup.rs  config.rs  main.rs
backend/src/api/: audit.rs  auth.rs  mod.rs  organizations.rs  uploads.rs  users.rs  vaults.rs  websocket.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/storage/: local.rs  mod.rs
backend/src/sync/: mod.rs
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/patches/: @blocksuite__affine-components@0.0.0-canary-20250316001624.patch  (+1 more)
frontend/src-tauri/: Cargo.toml  (+1 more)
(+92 files in other folders)
